# magic_touchscreen

./: .gitignore  CMakeLists.txt  linux.cpp  magicts.h  windows.cpp
